# ChangeLog for net-nntp/tin
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-nntp/tin/ChangeLog,v 1.22 2009/03/08 10:30:25 cla Exp $

  08 Mar 2009; Dawid Węgliński <cla@gentoo.org> tin-1.8.3.ebuild:
  Prevent double emake

  07 Mar 2009; Dawid Węgliński <cla@gentoo.org> tin-1.8.3.ebuild:
  Migration to EAPI 2

  23 Sep 2008; Markus Rothe <corsair@gentoo.org> tin-1.8.3.ebuild:
  Stable on ppc

  23 May 2008; Markus Rothe <corsair@gentoo.org> tin-1.8.3.ebuild:
  Added ~ppc

  25 Jan 2008; Fabian Groffen <grobian@gentoo.org> tin-1.8.3.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  15 Apr 2007; Sven Wegener <swegener@gentoo.org> -tin-1.8.2.ebuild:
  Cleanup.

*tin-1.8.3 (11 Feb 2007)

  11 Feb 2007; Sven Wegener <swegener@gentoo.org> +tin-1.8.3.ebuild:
  Version bump. Add unicode support, use system libpcre.

  13 Nov 2006; Sven Wegener <swegener@gentoo.org>
  -files/tin-1.7.7-mbox-mmdf.patch, -tin-1.6.2.ebuild, -tin-1.7.8.ebuild:
  Cleanup.

  29 Oct 2006; Bryan Østergaard <kloeri@gentoo.org> tin-1.8.2.ebuild:
  Stable on ia64, bug 150229.

  27 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org> tin-1.8.2.ebuild:
  Stable on sparc wrt security #150229

  26 Oct 2006; Chris Gianelloni <wolf31o2@gentoo.org> tin-1.8.2.ebuild:
  Stable on x86 wrt bug #150229.

  15 Oct 2006; Aron Griffis <agriffis@gentoo.org> tin-1.8.2.ebuild:
  Mark 1.8.2 ~ia64

  09 Aug 2006; Fabian Groffen <grobian@gentoo.org> tin-1.8.2.ebuild:
  Marked ~ppc-macos (bug #143380)

*tin-1.8.2 (09 Aug 2006)

  09 Aug 2006; Sven Wegener <swegener@gentoo.org>
  +files/1.8.2-various.patch, +tin-1.8.2.ebuild:
  Version bump, bug #121529.

  02 May 2006; Jason Wever <weeve@gentoo.org> tin-1.6.2.ebuild:
  Stable on SPARC.

  02 May 2006; Sven Wegener <swegener@gentoo.org> -tin-1.7.7-r1.ebuild,
  tin-1.7.8.ebuild:
  Disable X support, it needs more work.

*tin-1.7.8 (16 May 2005)
