@@ -2,4 +2,10 @@
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
 <herd>net-news</herd>
+<use>
+<flag name='cancel-locks'>Enable CancelLock functionality</flag>
+<flag name='evil'>Let tin generate a message ID</flag>
+<flag name='forgery'>Cancel messages posted from a different account</flag>
+<flag name='etiquette'>Enable the display off posting etiquettes</flag>
+</use>
 </pkgmetadata>
