@@ -1,6 +1,12 @@
 # ChangeLog for net-nntp/tin
-# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-nntp/tin/ChangeLog,v 1.22 2009/03/08 10:30:25 cla Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-nntp/tin/ChangeLog,v 1.23 2010/01/07 15:21:11 patrick Exp $
+
+*tin-1.9.4 (07 Jan 2010)
+
+  07 Jan 2010; Patrick Lauer <patrick@gentoo.org> +tin-1.9.4.ebuild,
+  metadata.xml:
+  Bump for #260370. Thanks to Sebastian Luettich
 
   08 Mar 2009; Dawid Węgliński <cla@gentoo.org> tin-1.8.3.ebuild:
   Prevent double emake
